--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
-  "name": "note-taker",
+  "name": "note-pad",
   "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
+  "description": "Note Pad",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Ashleigh Freiler",
+  "license": "MIT",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "inquirer": "^8.0.0",
+    "mysql": "^2.18.1",
+    "path": "^0.12.7"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
