--- a/package.json
+++ b/package.json
@@ -2,19 +2,15 @@
   "name": "note-pad",
   "version": "1.0.0",
   "description": "Note Pad",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Ashleigh Freiler",
-  "license": "MIT",
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
-    "inquirer": "^8.0.0",
-    "mysql": "^2.18.1",
-    "path": "^0.12.7"
-  },
-  "scripts": {
-    "start": "node server.js"
+    "uniqid": "^5.3.0"
   }
 }
